--- a/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
@@ -1,25 +1,24 @@
 <div class="container">
     <div class="header">
-        <h3 i18n="Title">Componente Cardiopulmunar</h3>
-        <h4 i18n>Teste de Bicicleta</h4>
+        <h1 i18n>Testes de Bicicleta</h1>
     </div>
     
 
-    <div class="main">
+    <div class="section">
 
                 <mat-card>
                     <mat-card-header [routerLink]="['/astryh']">
-                        <mat-card-subtitle i18n="Subtitle">Astrand-Ryhming (1954) - 6min</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Astrand-Ryhming - 6 minutos</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/balke']">
-                        <mat-card-subtitle i18n="Subtitle">Balke e Ware (1954) - feminino</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Balke e Ware - feminino</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/ymca']">
-                        <mat-card-subtitle i18n="Subtitle">YMCA - Golding, Myers & Sinning (1989) - masculino</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">YMCA - Golding, Myers & Sinning - masculino</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
 
