--- a/src/app/avaliation/CardioPulmunar/teste-outros/teste-outros.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-outros/teste-outros.component.html
@@ -1,11 +1,10 @@
 <div class="container">
     <div class="header">
-        <h3 i18n="Title">Componente Cardiopulmunar</h3>
-        <h4 i18n>Outros Testes</h4>
+        <h1 i18n>Outros Testes</h1>
     </div>
     
 
-    <div class="main">
+    <div class="section">
 
                 <mat-card>
                     <mat-card-header [routerLink]="['/banco']">
