--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -118,17 +118,17 @@
                 </mat-expansion-panel-header>
                 <mat-card>
                     <mat-card-header routerLink="/tcam/">
-                        <mat-card-subtitle i18n="Subtitle">Teste de Caminhada</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Testes de Caminhada</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/tcorr/">
-                        <mat-card-subtitle i18n="Subtitle">Teste de Corrida</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Testes de Corrida</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/tbic/">
-                        <mat-card-subtitle i18n="Subtitle">Teste de Bicicleta</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Testes de Bicicleta</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
