--- a/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.html
+++ b/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="header">
-        <h3>Flexibilidade - Técnicas Utilizadas</h3>
+        <h1>Flexibilidade - Técnicas Utilizadas</h1>
     </div>
 
-    <div class="main">
+    <div class="section">
         <mat-card>
             <mat-card-header [routerLink]="['/goniometro/']">
                 <mat-card-subtitle i18n="Subtitle">Goniômetro
