--- a/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
@@ -1,25 +1,24 @@
 <div class="container">
     <div class="header">
-        <h3 i18n="Title">Componente Cardiopulmunar</h3>
-        <h4 i18n>Teste de Caminhada</h4>
+        <h1 i18n>Testes de Caminhada</h1>
     </div>
     
 
-    <div class="main">
+    <div class="section">
 
                 <mat-card>
                     <mat-card-header [routerLink]="['/rock']">
-                        <mat-card-subtitle i18n="Subtitle">Rockport (1987) - 1609m</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Rockport - 1609m</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/ukk']">
-                        <mat-card-subtitle i18n="Subtitle">Instituto UKK Finlândia<br/>Kukkonen-Harjula et Al, 1998 -2000m</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Instituto UKK Finlândia<br/>Kukkonen-Harjula et Al - 2000m</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/cureton']">
-                        <mat-card-subtitle i18n="Subtitle">Cureton et Al, (1954) - 1609m</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Cureton et Al - 1609m</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
 
