--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
@@ -1,25 +1,24 @@
 <div class="container">
     <div class="header">
-        <h3 i18n="Title">Componente Cardiopulmunar</h3>
-        <h4 i18n>Teste de Corrida</h4>
+        <h1 i18n>Testes de Corrida</h1>
     </div>
     
 
-    <div class="main">
+    <div class="section">
 
                 <mat-card>
                     <mat-card-header [routerLink]="['/rock']">
-                        <mat-card-subtitle i18n="Subtitle">Cooper (1968) - 12min</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Cooper - 12min</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/george']">
-                        <mat-card-subtitle i18n="Subtitle">George et Al (1993) - 1609m</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">George et Al - 1609m</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/george2']">
-                        <mat-card-subtitle i18n="Subtitle">George et Al (1993) - 3min</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">George et Al - 3min</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
     </div>
