--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
@@ -1,30 +1,16 @@
-  .main{
-      width: 90%;
-      height: 75%;
-      position: absolute;
-      display: flex;
-      flex-direction: column-reverse;
-      bottom: 8%;
-      left: 50%;
-      transform: translate(-50%,0);
+.container {
+  background-image: url("../../../../assets/img/tomasz-wozniak-V62UrdknDCA-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-blend-mode: normal;
+  background-size: cover;
+  background-position: center;
+}
 
-      mat-expansion-panel{
-        background-color: rgba(247, 238, 238, 0.704);
-        border-radius: 4px;
-      }
-      
-      mat-expansion-panel-body {
-        padding: 0;
-      }
+.mat-card{
+  height: 30px;
+  background-color: rgba(247, 238, 238, 0.704);
+  margin-bottom: 1px;
+}
 
-
-    .mat-card{
-        height: 30px;
-      //  background-color: rgba(14, 13, 13, 0.904);
-        margin-bottom: 1px;
-        
-    }
-
-  }
 
   
