--- a/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
+++ b/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
@@ -28,29 +28,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
+                        <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
                         <td *ngIf="addEval">
-                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
-                                type="number" step="0.1">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n><span (click)="openHelpDialog('Subescalar')">Subescalar</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
-                        <td *ngIf="addEval">
-                            <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
-                                type="number" step="0.1">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n><span (click)="openHelpDialog('Peitoral')">Peitoral</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral}}</td>
-                        <td *ngIf="addEval">
-                            <input name="peitoral" #peitoral="ngModel" [(ngModel)]="newEvaluation.peitoral"
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
                                 type="number" step="0.1">
                         </td>
                     </tr>
@@ -64,20 +46,11 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
+                        <th i18n><span (click)="openHelpDialog('Biciptal')">Biciptal</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].biciptal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].biciptal}}</td>
                         <td *ngIf="addEval">
-                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
-                                type="number" step="0.1">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
-                        <td *ngIf="addEval">
-                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                            <input name="biciptal" #biciptal="ngModel" [(ngModel)]="newEvaluation.biciptal"
                                 type="number" step="0.1">
                         </td>
                     </tr>
@@ -90,31 +63,81 @@
                                 step="0.1">
                         </td>
                     </tr>
+                    <tr>
+                        <th i18n><span (click)="openHelpDialog('Geminal')">Geminal</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].geminal}}</td>
+                        <td *ngIf="addEval">
+                            <input name="geminal" #geminal="ngModel" [(ngModel)]="newEvaluation.geminal"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th i18n><span (click)="openHelpDialog('Peitoral')">Peitoral</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="peitoral" #peitoral="ngModel" [(ngModel)]="newEvaluation.peitoral"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th i18n><span (click)="openHelpDialog('Subescalar')">Subescalar</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
+                        <td *ngIf="addEval">
+                            <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th i18n><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
+                        <td *ngIf="addEval">
+                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
+                        <td *ngIf="addEval">
+                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
 
                     <tr>
                         <th i18n>Media</th>
                         <td *ngIf="pointer>=1">
-                            {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].peitoral 
+                            {{(+evaluation[pointer-1].biciptal + +evaluation[pointer-1].geminal + +evaluation[pointer-1].triciptal
+                               + +evaluation[pointer-1].peitoral + +evaluation[pointer-1].subescapular 
                                + +evaluation[pointer-1].axilar + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].abdominal 
-                               + +evaluation[pointer-1].crural) / 7 | number: '1.2-2'}}</td>
+                               + +evaluation[pointer-1].crural) / 7 | number: '1.2-2'}}
+                        </td>
                         <td *ngIf="pointer>=0">
-                            {{(+evaluation[pointer].triciptal + +evaluation[pointer].subescapular + +evaluation[pointer].peitoral 
-                               + +evaluation[pointer].axilar + +evaluation[pointer].suprailiaca + +evaluation[pointer].abdominal 
-                               + +evaluation[pointer].crural) / 7 | number: '1.2-2'}}
+                            {{(+evaluation[pointer].biciptal + +evaluation[pointer].geminal + +evaluation[pointer].triciptal
+                                + +evaluation[pointer].peitoral + +evaluation[pointer].subescapular 
+                                + +evaluation[pointer].axilar + +evaluation[pointer].suprailiaca + +evaluation[pointer].abdominal 
+                                + +evaluation[pointer].crural) / 7 | number: '1.2-2'}}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1">
-                            {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].peitoral 
-                               + +evaluation[pointer-1].axilar + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].abdominal 
-                               + +evaluation[pointer-1].crural | number: '1.2-2'}}
+                            {{+evaluation[pointer-1].biciptal + +evaluation[pointer-1].geminal + +evaluation[pointer-1].triciptal
+                                + +evaluation[pointer-1].peitoral + +evaluation[pointer-1].subescapular 
+                                + +evaluation[pointer-1].axilar + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].abdominal 
+                                + +evaluation[pointer-1].crural | number: '1.2-2'}}
                         </td>
                         <td *ngIf="pointer>=0">
-                            {{+evaluation[pointer].triciptal + +evaluation[pointer].subescapular + +evaluation[pointer].peitoral 
-                               + +evaluation[pointer].axilar + +evaluation[pointer].suprailiaca + +evaluation[pointer].abdominal 
-                               + +evaluation[pointer].crural | number: '1.2-2'}}
+                            {{+evaluation[pointer].biciptal + +evaluation[pointer].geminal + +evaluation[pointer].triciptal
+                                + +evaluation[pointer].peitoral + +evaluation[pointer].subescapular 
+                                + +evaluation[pointer].axilar + +evaluation[pointer].suprailiaca + +evaluation[pointer].abdominal 
+                                + +evaluation[pointer].crural | number: '1.2-2'}}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
