--- a/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.scss
+++ b/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.scss
@@ -1,27 +1,15 @@
-  .main{
-    width: 90%;
-    height: 70%;
-    position: absolute;
-    bottom: 8%;
-    display: flex;
-    flex-direction: column-reverse;
-    left: 50%;
-    overflow: auto;
-    transform: translate(-50%,0);
+.container {
+  background-image: url("../../../../assets/img/fezbot2000-smWTOhdPvJc-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-blend-mode: normal;
+  background-size: cover;
+  background-position: center;
+}
 
-      mat-expansion-panel{
-        background-color: rgba(247, 238, 238, 0.704);
-        border-radius: 4px;
-      }
-  
-
-    .mat-card{
-        height: 30px;
-      //  background-color: rgba(14, 13, 13, 0.904);
-        margin-bottom: 1px;
-        
-    }
-
-  }
+.mat-card{
+  height: 30px;
+  background-color: rgba(247, 238, 238, 0.704);
+  margin-bottom: 1px;
+}
 
   
