--- a/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
+++ b/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
@@ -153,7 +153,7 @@
                             </tr>
                             <tr>
                                 <td colspan="3">
-                                    <small class="advise-sm">*Todas as evaluation são em graus</small>
+                                    <small class="advise-sm">*Todas as medições são em graus</small>
                                 </td> 
                             </tr>
                         </tbody>
@@ -300,7 +300,7 @@
                             </tr>
                             <tr>
                                 <td colspan="3">
-                                    <small class="advise-sm">*Todas as evaluation são em graus</small>
+                                    <small class="advise-sm">*Todas as medições são em graus</small>
                                 </td>
                             </tr>
                         </tbody>
@@ -421,7 +421,7 @@
                             </tr>
                             <tr>
                                 <td colspan="3">
-                                    <small class="advise-sm">*Todas as evaluation são em graus</small>
+                                    <small class="advise-sm">*Todas as medições são em graus</small>
                                 </td>
                             </tr>
                         </tbody>
