--- a/src/app/avaliation/dobras/carter/carter.component.html
+++ b/src/app/avaliation/dobras/carter/carter.component.html
@@ -4,21 +4,33 @@
     </div> 
     <div class="section">
      <form #f="ngForm" (submit)="save(f.value)">
-         <table>
-             <thead>
-                 <tr>
-                     <th>&nbsp;</th>
-                     <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
-                     <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
-                     <th class="th-top" *ngIf="addEval">
-                         <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                             style="width: 110px;">
-                     </th>
-                 </tr>
-             </thead>
+        <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
+        <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
+        <input type="hidden" name="punho" #punho="ngModel" [(ngModel)]="newEvaluation.punho">
+        <input type="hidden" name="joelho" #joelho="ngModel" [(ngModel)]="newEvaluation.joelho">
+        <table>
+            <thead>
+                <tr>
+                    <th>&nbsp;</th>
+                    <th class="th-top" *ngIf="pointer>=1">
+                        <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
+                            {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                        </button>
+                    </th>
+                    <th class="th-top" *ngIf="pointer>=0">
+                        <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer])">
+                            {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                        </button>
+                    </th>
+                    <th class="th-top" *ngIf="addEval">
+                        <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                            style="width: 110px;">
+                    </th>
+                </tr>
+            </thead>
              <tbody>
                  <tr>
-                     <th><span>Triciptal</span></th>
+                     <th><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
                      <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                      <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                      <td *ngIf="addEval">
@@ -27,7 +39,7 @@
                      </td>
                  </tr>
                  <tr>
-                     <th>Subescapular</th>
+                     <th><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
                      <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                      <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                      <td *ngIf="addEval">
@@ -36,7 +48,7 @@
                      </td>
                  </tr>
                 <tr>
-                    <th>Abdominal</th>
+                    <th><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
                     <td *ngIf="addEval">
@@ -45,7 +57,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th><span>Coxa</span></th>
+                    <th><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
                     <td *ngIf="addEval">
@@ -54,7 +66,7 @@
                     </td>
                 </tr>
                  <tr>
-                     <th>Geminal</th>
+                     <th><span (click)="openHelpDialog('Geminal')">Geminal</span></th>
                      <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal}}</td>
                      <td *ngIf="pointer>=0">{{evaluation[pointer].geminal}}</td>
                      <td *ngIf="addEval">
@@ -63,7 +75,7 @@
                      </td>
                  </tr>
                  <tr>
-                    <th>Suprailiaca</th>
+                    <th><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
                     <td *ngIf="addEval">
@@ -73,8 +85,18 @@
                 </tr>
                  <tr>
                     <th>Media</th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_xmedia}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].c_xmedia}}</td>
+                    <td *ngIf="pointer>=1">
+                        {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
+                                              + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural
+                                              + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca)
+                                            / 6 | number: '1-2-2'}}
+                    </td>
+                    <td *ngIf="pointer>=0">
+                        {{(+evaluation[pointer].triciptal + +evaluation[pointer].subescapular
+                            + +evaluation[pointer].abdominal + +evaluation[pointer].crural
+                            + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca)
+                          / 6 | number: '1-2-2'}}
+                    </td>
                     <td *ngIf="addEval">
                         <input name="c_xmedia" #c_xmedia="ngModel" [(ngModel)]="newEvaluation.c_xmedia"
                             type="number" step="0.1">
@@ -82,8 +104,18 @@
                 </tr>
                  <tr>
                      <th>Somatório</th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_xtot}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].c_xtot}}</td>
+                     <td *ngIf="pointer>=1">
+                        {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
+                            + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural
+                            + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca
+                           | number: '1-2-2'}}
+                     </td>
+                     <td *ngIf="pointer>=0">
+                        {{+evaluation[pointer].triciptal + +evaluation[pointer].subescapular
+                            + +evaluation[pointer].abdominal + +evaluation[pointer].crural
+                            + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca
+                           | number: '1-2-2'}}
+                     </td>
                      <td *ngIf="addEval">
                          <input name="c_xtot" #c_xtot="ngModel" [(ngModel)]="newEvaluation.c_xtot"
                              type="number" step="0.1">
@@ -112,7 +144,38 @@
              </button>
          </div>
      </form>
- 
+     <div *ngIf="showChart">
+        <div style="text-align: center; color: blue;">
+            <div>
+                <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
+                    <mat-button-toggle value="pie">{{selectedEvaluation.data | date:'dd-LL-yyyy'}}
+                    </mat-button-toggle>
+                    <mat-button-toggle value="compare">Comparativo</mat-button-toggle>
+                </mat-button-toggle-group>
+            </div>
+            <div *ngIf="chartSelected=='pie'">
+                <mat-label i18n>% Gordura Desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
+                <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                    [disabled]="!fatChanged" (change)="getNewEvaluation()">
+                </mat-slider>
+                <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+                    <mat-icon>save</mat-icon>
+                </button>
+            </div>
+        </div>
+        <!-- charts -->
+        <div class="chart-pie" *ngIf="chartSelected=='pie'">
+            <app-chart-pie [values]="single"></app-chart-pie>
+            <app-chart-pie [values]="single2"></app-chart-pie>
+        </div>
+        <div *ngIf="chartSelected=='compare'">
+            <app-chart-compare [id]="student.id" [protocolo]="protocolo" [percgd]="gorduraDesejada">
+            </app-chart-compare>
+        </div>
+    </div>
  </div>
  
  <div class="footer">
