--- a/src/app/avaliation/dobras/sloan/sloan.component.html
+++ b/src/app/avaliation/dobras/sloan/sloan.component.html
@@ -40,10 +40,10 @@
                     </tr>
                     <tr *ngIf="sexo=='F'">
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tricipital}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].tricipital}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
-                            <input name="tricipital" #tricipital="ngModel" [(ngModel)]="newEvaluation.tricipital"
+                            <input name="triciptal" #tricipital="ngModel" [(ngModel)]="newEvaluation.triciptal"
                                 type="number" step="0.1">
                         </td>
                     </tr>
@@ -87,13 +87,13 @@
                             {{+evaluation[pointer-1].subescapular + +evaluation[pointer-1].crural |number: '1.2-2'}}
                         </td>
                         <td *ngIf="pointer>=1 && sexo =='F'">
-                            {{+evaluation[pointer-1].tricipital + +evaluation[pointer-1].suprailiaca |number: '1.2-2'}}
+                            {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca |number: '1.2-2'}}
                         </td>
                         <td *ngIf="pointer>=0 && sexo == 'M'">
                             {{+evaluation[pointer].subescapular + +evaluation[pointer].crural |number: '1.2-2'}}
                         </td>
                         <td *ngIf="pointer>=0 && sexo == 'F'">
-                            {{+evaluation[pointer].tricipital + +evaluation[pointer].suprailiaca |number: '1.2-2'}}
+                            {{+evaluation[pointer].triciptal + +evaluation[pointer].suprailiaca |number: '1.2-2'}}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
