--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
@@ -12,12 +12,12 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th class="th-top" *ngIf="pointer>=1">
-                            <button type="button" (click)="setEvaluation(evaluation[pointer-1])">
+                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
                                 {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
                             </button>
                         </th>
                         <th class="th-top" *ngIf="pointer>=0">
-                            <button type="button" (click)="setEvaluation(evaluation[pointer])">
+                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer])">
                                 {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
                             </button>
                         </th>
@@ -88,20 +88,35 @@
         </h4>
         <div *ngIf="showChart">
             <div style="text-align: center; color: blue;">
-                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
-                <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
-                    [disabled]="!fatChanged" (change)="getNewEvaluation()">
-                </mat-slider>
-                <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
-                    <mat-icon>edit</mat-icon>
-                </button>
-                <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
-                    <mat-icon>save</mat-icon>
-                </button>
+                <div>
+                    <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
+                        <mat-button-toggle value="pie">{{selectedEvaluation.data | date:'dd-LL-yyyy'}}
+                        </mat-button-toggle>
+                        <mat-button-toggle value="compare">Comparativo</mat-button-toggle>
+                    </mat-button-toggle-group>
+                </div>
+                <div *ngIf="chartSelected=='pie'">
+                    <mat-label i18n>% Gordura Desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
+                    <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                        [disabled]="!fatChanged" (change)="getNewEvaluation()">
+                    </mat-slider>
+                    <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+                        <mat-icon>save</mat-icon>
+                    </button>
+                </div>
             </div>
-
-            <app-chart-pie [values]="single"></app-chart-pie>
-            <app-chart-pie [values]="single2"></app-chart-pie>
+            <!-- charts -->
+            <div class="chart-pie" *ngIf="chartSelected=='pie'">
+                <app-chart-pie [values]="single"></app-chart-pie>
+                <app-chart-pie [values]="single2"></app-chart-pie>
+            </div>
+            <div *ngIf="chartSelected=='compare'">
+                <app-chart-compare [id]="student.id" [protocolo]="protocolo" [percgd]="gorduraDesejada">
+                </app-chart-compare>
+            </div>
         </div>
 
     </div>
