--- a/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.html
+++ b/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.html
@@ -30,13 +30,9 @@
                     <th><span>Classificação</span></th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].xclasse}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].xclasse}}</td>
-                    <td *ngIf="addEval">
-                        <input name="xclasse" #xclasse="ngModel" [(ngModel)]="newEvaluation.xclasse"
-                             type="number" step="0.1">
-                    </td>
+                    <td *ngIf="addEval">&nbsp;</td>
                 </tr>
-               
-                </tbody>
+              </tbody>
          </table>
  
          <div class="action">
