refactoring, rockport, cooper, prescicao e relatorios dash

--- a/src/app/reports/rep-dash/rep-dash.component.html
+++ b/src/app/reports/rep-dash/rep-dash.component.html
@@ -1,4 +1,15 @@
-<div class="container-fluid">
-    <h1>Relatorios e Estatisticas</h1>
-    <h2>{{selectedStudent}}</h2>
+<div class="container">
+    <div class="header">
+        <h1>Relatorios e Estatisticas</h1>
+    </div>
+
+    <div class="section">
+
+    </div>
+    <div class="footer">
+        <a mat-mini-fab color="primary" routerLink="/dash">
+            <mat-icon>home</mat-icon>
+        </a>
+    </div>
+    
 </div>
