--- a/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
+++ b/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
@@ -8,8 +8,16 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
-                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
+                        <th class="th-top" *ngIf="pointer>=1">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer-1])">
+                                {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer])">
+                                {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
                         <th class="th-top" *ngIf="addEval">
                             <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                 style="width: 110px;">
@@ -18,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th i18n>Minuto/FC 0'</th>
+                        <th i18n>FC ao minuto 0'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min0}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min0}}</td>
                         <td *ngIf="addEval">
@@ -27,7 +35,7 @@
                         </td>
                     </tr>                  
                     <tr>
-                        <th i18n>Minuto/FC 2'</th>
+                        <th i18n>FC ao minuto 2'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min2}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min2}}</td>
                         <td *ngIf="addEval">
@@ -36,7 +44,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 4'</th>
+                        <th i18n>FC ao minuto 4'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min4}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min4}}</td>
                         <td *ngIf="addEval">
@@ -45,7 +53,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 6'</th>
+                        <th i18n>FC ao minuto 6'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min6}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min6}}</td>
                         <td *ngIf="addEval">
@@ -54,7 +62,7 @@
                         </td>
                     </tr>                  
                     <tr>
-                        <th i18n>Minuto/FC 8'</th>
+                        <th i18n>FC ao minuto 8'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min8}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min8}}</td>
                         <td *ngIf="addEval">
@@ -63,7 +71,7 @@
                         </td>
                     </tr>                  
                     <tr>
-                        <th i18n>Minuto/FC 10'</th>
+                        <th i18n>FC ao minuto 10'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min10}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min10}}</td>
                         <td *ngIf="addEval">
@@ -72,11 +80,11 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 12'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fc}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fc}}</td>
+                        <th i18n>FC final'</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
                         <td *ngIf="addEval">
-                            <input name="c_fc" #c_fc="ngModel" [(ngModel)]="newEvaluation.c_fc" type="number"
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
                                 step="0.1">
                         </td>
                     </tr>
@@ -112,7 +120,9 @@
                 </button>
             </div>
         </form>
-
+        <div class="charts">
+            <app-chart-cardio [id]="selectedStudent.id" [protocolo]="protocolo"></app-chart-cardio>
+        </div>
     </div>
 
     <div class="footer">
