--- a/src/app/avaliation/CardioPulmunar/rockport/rockport.component.html
+++ b/src/app/avaliation/CardioPulmunar/rockport/rockport.component.html
@@ -27,118 +27,118 @@
                 <tbody>
                     <tr>
                         <th i18n>FC ao minuto 0'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min0}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min0}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC ao minuto 2'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicall}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicall}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min2}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min2}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicall" #cervicall="ngModel" [(ngModel)]="newEvaluation.cervicall" type="number"
+                            <input name="min2" #min2="ngModel" [(ngModel)]="newEvaluation.min2" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 4'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min4}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min4}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="min4" #min4="ngModel" [(ngModel)]="newEvaluation.min4" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 6'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min6}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min6}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC ao minuto 8'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicall}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicall}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min8}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min8}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicall" #cervicall="ngModel" [(ngModel)]="newEvaluation.cervicall" type="number"
+                            <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 10'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min10}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min10}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 12'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min12}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min12}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC ao minuto 14'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicall}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicall}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min14}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min14}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicall" #cervicall="ngModel" [(ngModel)]="newEvaluation.cervicall" type="number"
+                            <input name="min14" #min14="ngModel" [(ngModel)]="newEvaluation.min14" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 16'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min16}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min16}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="min16" #min16="ngModel" [(ngModel)]="newEvaluation.min16" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 18'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min18}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min18}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC ao minuto 20'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicall}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicall}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min20}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min20}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicall" #cervicall="ngModel" [(ngModel)]="newEvaluation.cervicall" type="number"
+                            <input name="min20" #min20="ngModel" [(ngModel)]="newEvaluation.min20" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>Tempo Final</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_tempo}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_tempo}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC Final</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
                                 step="0.1">
                         </td>
                     </tr>
@@ -165,7 +165,9 @@
                 </button>
             </div>
         </form>
-
+        <div class="charts">
+            <app-chart-cardio [id]="selectedStudent.id" [protocolo]="protocolo"></app-chart-cardio>
+        </div>
     </div>
 
     <div class="footer">
