--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
@@ -7,7 +7,7 @@
     <div class="section">
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/rock']">
+                    <mat-card-header [routerLink]="['/cooper']">
                         <mat-card-subtitle i18n="Subtitle">Cooper - 12min</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
