--- a/src/app/prescription/pre-dash/pre-dash.component.html
+++ b/src/app/prescription/pre-dash/pre-dash.component.html
@@ -1,10 +1,9 @@
-<div class="container-fluid">
+<div class="container">
     <div class="header">
         <h1>Prescrições de Exercicios</h1>
-        <h2>{{selectedStudent.NOME}}</h2>
     </div>
 
-    <div class="main">
+    <div class="section">
         <mat-accordion>
             <mat-expansion-panel class="accordion">
                 <mat-expansion-panel-header>
