--- a/src/app/prescription/pre-dash/pre-dash.component.scss
+++ b/src/app/prescription/pre-dash/pre-dash.component.scss
@@ -1,71 +1,20 @@
-.container-fluid{
-    position: relative;
- /*    background-image: url("../../../assets/img/scott-webb-KblIFRq1jkg-unsplash.jpg");
-    background-repeat: no-repeat;
-    background-blend-mode: normal;
-    background-size: cover;
-    background-position: center; */
-    background-color: rgba(75, 73, 73, 0.904);
-    overflow: auto;
+.container{
+  background-image: url("../../../assets/img/mark-bertulfo-XKimW0pke6w-unsplash.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 95vh;
+}
+
+.mat-expansion-panel {
+  background-color: rgba(247, 238, 238, 0.704);
+}
+
+@media only screen and (min-width: 768px) {
+  .section {
+    width: 50%;
   }
-
-  .header{
-      margin-top: 30px;;
-      width: 100%;
-      text-align: center;
-      color: white;
+  ::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
   }
-
-  .main{
-      width: 90%;
-      position: absolute;
-      bottom: 8%;
-      left: 50%;
-      transform: translate(-50%,0);
-
-      mat-expansion-panel{
-        background-color: rgba(34, 32, 32, 0.904);
-        border-radius: 4px;
-      }
-      .mat-expansion-panel:not(.mat-expanded):not([aria-disabled=true]) .mat-expansion-panel-header:hover{
-          background-color: rgba(51, 48, 48, 0.904);
-      }
-      mat-expansion-panel-header {
-        background-color: rgba(51, 48, 48, 0.904);      
-      }
-      
-      mat-expansion-panel-body {
-        padding: 0;
-      }
-
-      mat-expansion-panel-content{
-        background-color: rgba(51, 48, 48, 0.904);
-      }
-
-
-
-      mat-panel-title{
-        color: white;
-    }
-    .mat-card{
-        height: 30px;
-        background-color: rgba(14, 13, 13, 0.904);
-        margin-bottom: 1px;
-        .mat-card-subtitle{
-           color: white; 
-        }
-        
-    }
-
-  }
-  
-  .footer{
-    position: absolute;
-    bottom: 1%;
-    left: 50%;
-    transform: translateX(-50%);
-  
-  }
-    
-
-  
+}
