--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,73 +1,81 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.mat-toolbar{
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.mat-toolbar {
   height: 6vh;
 }
-.container{
-    position: relative;
-    height: 94vh;
-    width: 100vw;
-    margin: auto;
+.container {
+  position: relative;
+  height: 94vh;
+  width: 100vw;
+  margin: auto;
 }
 
 .header {
-    height: 30px;
-    width: 100%;
-    background-color: #3F51B5;
-    text-align: center;
-    color: white;
-    h1{
-        font-size: 20px;
-    }
+  height: 30px;
+  width: 100%;
+  background-color: #3f51b5;
+  text-align: center;
+  color: white;
+  h1 {
+    font-size: 20px;
   }
+}
 
-  .section {
-    position: absolute;
-    width: 98%;
-    padding: 10px;
-    height: 80vh;
-    bottom: 8%;
-    overflow: auto;
-    display: flex-start;
-    flex-direction: column;
-    align-items: stretch;
-    left: 50%;
-    transform: translateX(-50%);
-  } 
+.section {
+  position: absolute;
+  width: 98%;
+  padding: 10px;
+  height: 80vh;
+  bottom: 8%;
+  overflow: auto;
+  display: flex-start;
+  flex-direction: column;
+  align-items: stretch;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
-.graphics{
+.footer {
+  position: absolute;
+  height: 42px;
+  bottom: 1%;
+  left: 50%;
+  transform: translateX(-50%);
+  .mat-mini-fab {
+    margin: 2px 10px;
+  }
+}
+
+.graphics {
   width: 90%;
   margin: auto;
   display: flex;
   justify-content: center;
 }
-
-.footer {
-    position: absolute;
-    height: 42px;
-    bottom: 1%;
-    left: 50%;
-    transform: translateX(-50%);
-    .mat-mini-fab{
-      margin: 2px 10px;
-    }
-  }
-
-.sub-line{
+.sub-line {
   color: blue;
   font-weight: 600;
 }
 
-.mat-dialog-actions{
-  display: flex; justify-content: center;
+.mat-dialog-actions {
+  display: flex;
+  justify-content: center;
 }
-  
-@media only screen and (min-width: 768px) {
+$min-width: 1024px;
+@media only screen and (min-width: $min-width) {
   /* For desktop: */
-  .container{
+  .container {
     position: relative;
     height: 94vh;
     width: 60vw;
@@ -77,11 +85,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .header {
     height: 30px;
     width: 100%;
-    background-color: #3F51B5;
+    background-color: #3f51b5;
     text-align: center;
     color: white;
-    h1{
-        font-size: 20px;
+    h1 {
+      font-size: 20px;
     }
   }
 
@@ -94,9 +102,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     overflow: auto;
     display: flex;
     flex-direction: column;
-  } 
+  }
 
-  .graphics{
+  .graphics {
     width: 90%;
     margin: auto;
     display: flex;
@@ -109,7 +117,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     bottom: 1%;
     left: 50%;
     transform: translateX(-50%);
-    .mat-mini-fab{
+    .mat-mini-fab {
       margin: 2px 10px;
     }
   }
@@ -117,5 +125,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   ::-webkit-scrollbar {
     width: 0px;
     background: transparent;
-   } 
+  }
 }
