--- a/src/app/avaliation/componente-morfologica/st/st.component.html
+++ b/src/app/avaliation/componente-morfologica/st/st.component.html
@@ -66,13 +66,13 @@
                     </tr>
                     <tr>
                         <th i18n>Braço contraido <small>(cm)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].braco}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].braco}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].bracoc}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].bracoc}}</td>
                     </tr>
                     <tr>
                         <th i18n>Perna <small>(cm)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perna}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].perna}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].pernad}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].pernad}}</td>
                     </tr>
                 </tbody>
             </table>
