--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>TRAN & Weltman (1989)</h3>
+        <h3>Tran & Weltman (1989)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
