--- a/src/app/avaliation/antropometria/weltman-seip-tran/weltman-seip-tran.component.html
+++ b/src/app/avaliation/antropometria/weltman-seip-tran/weltman-seip-tran.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Weltman Seip Tran (1989)</h3>
+        <h3>Weltman, Seip & Tran (1989)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
