--- a/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.scss
+++ b/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.scss
@@ -15,6 +15,14 @@
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .section-info-image{
+    width: 50%;
+    img{
+      width:100%;
+    }
+  }
+}
 
 
 
