--- a/src/app/avaliation/composicao-corporal/cc.component.html
+++ b/src/app/avaliation/composicao-corporal/cc.component.html
@@ -11,25 +11,14 @@
                         DOBRAS CUTÂNEAS
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-
-                <mat-card>
-                    <mat-card-header routerLink="/slau">
-                        <mat-card-subtitle i18n="Subtitle" >Slaugther - 2 dobras</mat-card-subtitle>
-                    </mat-card-header>
-                </mat-card>
-                <mat-card>
-                    <mat-card-header routerLink="/jp3">
-                        <mat-card-subtitle i18n="Subtitle">Jackson & Pollock - 3 dobras</mat-card-subtitle>
-                    </mat-card-header>
-                </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/dw4">
                         <mat-card-subtitle i18n="Subtitle">Durnin & Wormersley - 4 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header routerLink="/sloan2">
-                        <mat-card-subtitle i18n="Subtitle">Sloan - 2 dobras</mat-card-subtitle>
+                    <mat-card-header routerLink="/faulkner">
+                        <mat-card-subtitle i18n="Subtitle">Faulkner - 4 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
@@ -38,13 +27,8 @@
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header routerLink="/pb4">
-                        <mat-card-subtitle i18n="Subtitle">Petroski, Brasileiros - 4 dobras</mat-card-subtitle>
-                    </mat-card-header>
-                </mat-card>
-                <mat-card>
-                    <mat-card-header routerLink="/carter">
-                        <mat-card-subtitle i18n="Subtitle">Carter - 6 dobras</mat-card-subtitle>
+                    <mat-card-header routerLink="/jp3">
+                        <mat-card-subtitle i18n="Subtitle">Jackson & Pollock - 3 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
@@ -53,13 +37,18 @@
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header routerLink="/wb2">
-                        <mat-card-subtitle i18n="Subtitle">Wilmore Behnke - 2 dobras</mat-card-subtitle>
+                    <mat-card-header routerLink="/pb4">
+                        <mat-card-subtitle i18n="Subtitle">Petroski - 4 dobras</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>                
+                <mat-card>
+                    <mat-card-header routerLink="/slau">
+                        <mat-card-subtitle i18n="Subtitle" >Slaugther - 2 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header routerLink="/wb3">
-                        <mat-card-subtitle i18n="Subtitle">Wilmore Behnke - 3 dobras</mat-card-subtitle>
+                    <mat-card-header routerLink="/sloan2">
+                        <mat-card-subtitle i18n="Subtitle">Sloan - 2 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
@@ -68,8 +57,19 @@
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
+                    <mat-card-header routerLink="/wb2">
+                        <mat-card-subtitle i18n="Subtitle">Wilmore & Behnke - 2 dobras</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/wb3">
+                        <mat-card-subtitle i18n="Subtitle">Wilmore & Behnke - 3 dobras</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+
+                <mat-card>
                     <mat-card-header routerLink="/all">
-                        <mat-card-subtitle i18n="Subtitle">Todas as Dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Somatório de Dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
@@ -105,25 +105,24 @@
                         ANTROPOMETRIA
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-
+                <mat-card>
+                    <mat-card-header routerLink="/metal">
+                        <mat-card-subtitle i18n="Subtitle">Mayhew et al</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/tw">
                         <mat-card-subtitle i18n="Subtitle">Tran & Weltman</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header routerLink="/wst">
-                        <mat-card-subtitle i18n="Subtitle">Weltman Seip & Tran</mat-card-subtitle>
-                    </mat-card-header>
-                </mat-card>
-                <mat-card>
                     <mat-card-header routerLink="/welt">
                         <mat-card-subtitle i18n="Subtitle">Weltman</mat-card-subtitle>
                     </mat-card-header>
-                </mat-card>
+                </mat-card>               
                 <mat-card>
-                    <mat-card-header routerLink="/metal">
-                        <mat-card-subtitle i18n="Subtitle">Mayhew et al</mat-card-subtitle>
+                    <mat-card-header routerLink="/wst">
+                        <mat-card-subtitle i18n="Subtitle">Weltman, Seip & Tran</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
