--- a/src/app/avaliation/composicao-corporal/scaner/scaner.component.html
+++ b/src/app/avaliation/composicao-corporal/scaner/scaner.component.html
@@ -1,1 +1,13 @@
-<p>scaner works!</p>
+<div class="container">
+    <div class="header">
+        <h1>SCANER</h1>
+    </div>
+    <div class="section">
+
+    </div>
+    <div class="footer">
+        <a mat-mini-fab color="primary" (click)="goBack()">
+            <mat-icon>undo</mat-icon>
+        </a>
+    </div>
+</div>
