--- a/src/app/avaliation/dobras/faulkner4/faulkner4.component.html
+++ b/src/app/avaliation/dobras/faulkner4/faulkner4.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h1 i18n>Petroski <small>(população brasileira)</small> - 4 Dobras</h1>
+        <h3 i18n>Faulkner - 4 Dobras</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -29,7 +29,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngIf="sex=='M'">
+                    <tr>
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
@@ -38,7 +38,7 @@
                                 type="number" step="0.1">
                         </td>
                     </tr>
-                    <tr *ngIf="sex=='M'">
+                    <tr>
                         <th i18n><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
@@ -47,79 +47,61 @@
                                 type="number" step="0.1">
                         </td>
                     </tr>
-                    <tr *ngIf="sex=='F'">
-                        <th i18n><span (click)="openHelpDialog('Axilar')">Axilar</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].axilar}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].axilar}}</td>
-                        <td *ngIf="addEval">
-                            <input name="axilar" #axilar="ngModel" [(ngModel)]="newEvaluation.axilar" type="number"
-                                step="0.1">
-                        </td>
-                    </tr>
-                    <tr *ngIf="sex=='F'">
-                        <th i18n><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
-                        <td *ngIf="addEval">
-                            <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural" type="number"
-                                step="0.1">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n><span (click)="openHelpDialog('Geminal')">Geminal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].geminal}}</td>
-                        <td *ngIf="addEval">
-                            <input name="geminal" #geminal="ngModel" [(ngModel)]="newEvaluation.geminal" type="number"
-                                step="0.1">
-                        </td>
-                    </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
                         <td *ngIf="addEval">
-                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
-                                type="number" step="0.1">
+                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca" type="number"
+                                step="0.1">
                         </td>
                     </tr>
                     <tr>
+                        <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
+                        <td *ngIf="addEval">
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr *ngIf="sex == 'M'">
+                        <th i18n><span (click)="openHelpDialog('Tipo aluno')">Tipo aluno</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tipoaluno}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].tipoaluno}}</td>
+                        <td *ngIf="addEval">
+                            <mat-form-field>
+                                <mat-label>Tipo Aluno</mat-label>
+                                <mat-select name="tipoaluno" #tipoaluno="ngModel" [(ngModel)]="newEvaluation.tipoaluno">
+                                    <mat-option value="Nadadores">Nadadores</mat-option>
+                                    <mat-option value="Futebolistas">Futebolistas</mat-option>
+                                    <mat-option value="Outros esportes">Outros esportes</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </td>
+                    </tr>
+
+                    <tr>
                         <th i18n>Media</th>
-                        <td *ngIf="pointer>=1 && sex=='M'">
+                        <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
-                          + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2' }}
+                          + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2' }}
                         </td>
-                        <td *ngIf="pointer>=1 && sex=='F'">
-                            {{(+evaluation[pointer-1].axilar + +evaluation[pointer-1].crural
-                         + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=0 && sex=='M'">
+                        <td *ngIf="pointer>=0">
                             {{(+evaluation[pointer].triciptal + +evaluation[pointer].subescapular
-                         + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca) / 4 | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=1 && sex=='F'">
-                            {{(+evaluation[pointer].axilar + +evaluation[pointer].crural
-                         + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca) / 4 | number: '1.2-2' }}
+                         + +evaluation[pointer].abdominal + +evaluation[pointer].suprailiaca) / 4 | number: '1.2-2' }}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th i18n>Somatório</th>
-                        <td *ngIf="pointer>=1 && sex=='M'">
+                        <td *ngIf="pointer>=1">
                             {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
-                           + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca | number: '1.2-2' }}
+                           + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].suprailiaca | number: '1.2-2' }}
                         </td>
-                        <td *ngIf="pointer>=1 && sex=='F'">
-                            {{+evaluation[pointer-1].axilar + +evaluation[pointer-1].crural
-                          + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=0 && sex=='M'">
+                        <td *ngIf="pointer>=0">
                             {{+evaluation[pointer].triciptal + +evaluation[pointer].subescapular
-                          + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=1 && sex=='F'">
-                            {{+evaluation[pointer].axilar + +evaluation[pointer].crural
-                          + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca | number: '1.2-2' }}
+                          + +evaluation[pointer].abdominal + +evaluation[pointer].suprailiaca | number: '1.2-2' }}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
