--- a/src/styles.scss
+++ b/src/styles.scss
@@ -130,7 +130,7 @@ td > input {
     width: 96%;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-content: center;
   }
 
