--- a/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
+++ b/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
@@ -80,7 +80,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>FC final'</th>
+                        <th i18n>FC ao minuto 12' <small>(final)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
                         <td *ngIf="addEval">
