--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -132,8 +132,13 @@
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header routerLink="/toutros/">
-                        <mat-card-subtitle i18n="Subtitle">Outros Testes</mat-card-subtitle>
+                    <mat-card-header routerLink="/tpiscina/">
+                        <mat-card-subtitle i18n="Subtitle">Testes em Piscina</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/tbanco/">
+                        <mat-card-subtitle i18n="Subtitle">Testes de Banco</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
