--- a/src/app/avaliation/CardioPulmunar/rockport/rockport.component.html
+++ b/src/app/avaliation/CardioPulmunar/rockport/rockport.component.html
@@ -166,8 +166,9 @@
             </div>
         </form>
         <div class="charts" *ngIf="paramEvaluation !=''">
-            <app-chart-cardio [evaluation]="paramEvaluation" [protocolo]="protocolo"></app-chart-cardio>
+            <app-chart-cardio [evaluation]="paramEvaluation" [protocolo]="protocolo" [classe]="classe"></app-chart-cardio>
         </div>
+        
     </div>
 
     <div class="footer">
