--- a/src/app/commun/chart-cardio/chart-cardio.component.html
+++ b/src/app/commun/chart-cardio/chart-cardio.component.html
@@ -1,4 +1,5 @@
 <div class="charts">
+    <!-- FC -->
     <ngx-charts-line-chart 
             [view]="view" 
             [scheme]="colorScheme" 
@@ -13,5 +14,12 @@
             [timeline]="timeline" 
             [results]="multi">
     </ngx-charts-line-chart>
+    <!-- VO2 -->
+    <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [results]="multi2" [gradient]="gradient"
+      [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel2"
+      [showYAxisLabel]="showYAxisLabel2" [xAxisLabel]="xAxisLabel2" [yAxisLabel]="yAxisLabel1"
+      [legendPosition]=""  [barPadding]="barPadding"
+      [groupPadding]="groupPadding">
+    </ngx-charts-bar-vertical-2d>
 
 </div>
